crates/htmlarc-dom/src/html/tests/snapshots/htmlarc_dom__html__tests__remove_formatting@aerodynamik.html.snap
---
source: crates/htmlarc-dom/src/html/tests/mod.rs
expression: "doc.to_html(HtmlFormat::Raw)"
input_file: crates/htmlarc-dom/src/html/tests/html/aerodynamik.html
snapshot_kind: text
---
<!DOCTYPE html><html class="client-nojs" dir="ltr" lang="sv"><head><meta charset="UTF-8"><title>aerodynamik - Wiktionary</title><script>document.documentElement.className="client-js";RLCONF={"wgBreakFrames":!1,"wgSeparatorTransformTable":[",\t."," \t,"],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","januari","februari","mars","april","maj","juni","juli","augusti","september","oktober","november","december"],"wgRequestId":"8c2701e4-24d0-45af-a3c1-7bf8b60166e2","wgCSPNonce":!1,"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":!1,"wgNamespaceNumber":0,"wgPageName":"aerodynamik","wgTitle":"aerodynamik","wgCurRevisionId":3300941,"wgRevisionId":3300941,"wgArticleId":416616,"wgIsArticle":!0,"wgIsRedirect":!1,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgPageContentLanguage":"sv","wgPageContentModel":"wikitext","wgRelevantPageName":"aerodynamik","wgRelevantArticleId":416616,"wgIsProbablyEditable":!0,"wgRelevantPageIsProbablyEditable":!0,"wgRestrictionEdit":[],"wgRestrictionMove":[],"wgMediaViewerOnClick":!0,"wgMediaViewerEnabledByDefault":!0, "wgVisualEditor":{"pageLanguageCode":"sv","pageLanguageDir":"ltr","pageVariantFallbacks":"sv"},"wgMFMode":"stable","wgMFAmc":!1,"wgMFAmcOutreachActive":!1,"wgMFAmcOutreachUserEligible":!1,"wgMFLazyLoadImages":!0,"wgMFDisplayWikibaseDescriptions":{"search":!0,"nearby":!0,"watchlist":!0,"tagline":!1},"wgMFIsPageContentModelEditable":!0,"wgWMESchemaEditAttemptStepOversample":!1,"wgULSCurrentAutonym":"svenska","wgNoticeProject":"wiktionary","wgCentralAuthMobileDomain":!0,"wgEditSubmitButtonLabelPublish":!0,"wgMinervaPermissions":{"watch":!0,"talk":!1},"wgMinervaFeatures":{"beta":!1,"donate":!0,"mobileOptionsLink":!0,"categories":!1,"pageIssues":!0,"talkAtTop":!1,"historyInPageActions":!1,"overflowSubmenu":!1,"tabsOnSpecials":!1,"personalMenu":!1,"mainMenuExpanded":!1,"simplifiedTalk":!0},"wgMinervaDownloadNamespaces":[0]};RLSTATE={"ext.globalCssJs.user.styles":"ready","site.styles":"ready","noscript":"ready","user.styles": "ready","ext.globalCssJs.user":"ready","user":"ready","user.options":"loading","skins.minerva.base.styles":"ready","skins.minerva.content.styles":"ready","skins.minerva.content.styles.images":"ready","mediawiki.hlist":"ready","mediawiki.ui.icon":"ready","mediawiki.ui.button":"ready","skins.minerva.icons.wikimedia":"ready","skins.minerva.mainMenu.icons":"ready","skins.minerva.mainMenu.styles":"ready","mobile.init.styles":"ready","ext.wikimediaBadges":"ready"};RLPAGEMODULES=["site","mediawiki.page.ready","skins.minerva.options","skins.minerva.scripts","ext.centralauth.centralautologin","mobile.init","ext.eventLogging","ext.wikimediaEvents","ext.navigationTiming","ext.centralNotice.geoIP","ext.centralNotice.startUp"];</script><script>(RLQ=window.RLQ||[]).push(function(){mw.loader.implement("user.options@1hzgi",function($,jQuery,require,module){/*@nomin*/mw.user.tokens.set({"patrolToken":"+\\","watchToken":"+\\","csrfToken":"+\\"});mw.user.options.set({"variant":"sv"}); });});</script><link href="/w/load.php?lang=sv&amp;modules=ext.wikimediaBadges%7Cmediawiki.hlist%7Cmediawiki.ui.button%2Cicon%7Cmobile.init.styles%7Cskins.minerva.base.styles%7Cskins.minerva.content.styles%7Cskins.minerva.content.styles.images%7Cskins.minerva.icons.wikimedia%7Cskins.minerva.mainMenu.icons%2Cstyles&amp;only=styles&amp;skin=minerva" rel="stylesheet"><script async src="/w/load.php?lang=sv&amp;modules=startup&amp;only=scripts&amp;raw=1&amp;skin=minerva&amp;target=mobile"></script><meta content="MediaWiki 1.36.0-wmf.13" name="generator"><meta content="origin" name="referrer"><meta content="origin-when-crossorigin" name="referrer"><meta content="origin-when-cross-origin" name="referrer"><meta content="#eaecf0" name="theme-color"><meta content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0" name="viewport"><link href="/w/api.php?action=webapp-manifest" rel="manifest"><link href="/w/index.php?title=aerodynamik&amp;action=edit" rel="alternate" title="Redigera" type="application/x-wiki"><link href="/w/index.php?title=aerodynamik&amp;action=edit" rel="edit" title="Redigera"><link href="/static/apple-touch/wiktionary.png" rel="apple-touch-icon"><link href="/static/favicon/piece.ico" rel="shortcut icon"><link href="/w/opensearch_desc.php" rel="search" title="Wiktionary (sv)" type="application/opensearchdescription+xml"><link href="//sv.wiktionary.org/w/api.php?action=rsd" rel="EditURI" type="application/rsd+xml"><link href="//creativecommons.org/licenses/by-sa/3.0/" rel="license"><link href="https://sv.wiktionary.org/wiki/aerodynamik" rel="canonical"><link href="//login.wikimedia.org" rel="dns-prefetch"><link href="//meta.wikimedia.org" rel="dns-prefetch"></head><body class="mediawiki ltr sitedir-ltr mw-hide-empty-elt ns-0 ns-subject mw-editable page-aerodynamik rootpage-aerodynamik stable issues-group-B skin-minerva action-view skin--responsive"><div id="mw-mf-viewport"><div id="mw-mf-page-center"><a class="mw-mf-page-center__mask" href="#"></a><header class="header-container header-chrome"><form class="header" action="/w/index.php" method="get"><nav class="navigation-drawer toggle-list view-border-box"><input class="toggle-list__checkbox" aria-labelledby="mw-mf-main-menu-button" id="main-menu-input" role="button" type="checkbox" /><label class="mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-menu-base20 mw-ui-icon-flush-left toggle-list__toggle" data-event-name="ui.mainmenu" for="main-menu-input" id="mw-mf-main-menu-button" title="Öppna huvudmenyn">Öppna huvudmenyn</label><div class="menu toggle-list__list view-border-box" id="mw-mf-page-left"><ul id="p-navigation"><li class="">    <a class="mw-ui-icon mw-ui-icon-before mw-ui-icon-minerva-home" data-event-name="menu.home" href="/wiki/Wiktionary:Huvudsida"><span>Huvudsida</span></a></li><li class="">    <a class="mw-ui-icon mw-ui-icon-before mw-ui-icon-minerva-die" data-event-name="menu.random" href="/wiki/Special:Random#/random"><span>Slumpartikel</span></a></li></ul><ul id="p-personal"><li class="">    <a class="menu__item--login mw-ui-icon mw-ui-icon-before mw-ui-icon-minerva-logIn" data-event-name="menu.login" href="/w/index.php?title=Special:Inloggning&amp;returnto=aerodynamik"><span>Logga in</span></a></li></ul><ul id="pt-preferences"><li class="jsonly">    <a class="menu__item--settings mw-ui-icon mw-ui-icon-before mw-ui-icon-minerva-settings" data-event-name="menu.settings" href="/w/index.php?title=Special:MobileOptions&amp;returnto=aerodynamik"><span>Inställningar</span></a></li></ul><ul id="p-donation"><li class="">    <a class="mw-ui-icon mw-ui-icon-before mw-ui-icon-minerva-heart" data-event-name="menu.donate" href="//donate.wikimedia.org/wiki/Special:FundraiserRedirector?utm_source=donate&amp;utm_medium=sidebar&amp;utm_campaign=C13_sv.wiktionary.org&amp;uselang=sv&amp;utm_key=minerva"><span>Stöd Wiktionary</span></a></li></ul><ul class="hlist"><li class="">    <a class="" data-event-name="" href="/wiki/Wiktionary:Om"><span>Om Wiktionary</span></a></li><li class="">    <a class="" data-event-name="" href="/wiki/Wiktionary:Allm%C3%A4nt_f%C3%B6rbeh%C3%A5ll"><span>Förbehåll</span></a></li></ul></div><label class="main-menu-mask" for="main-menu-input"></label></nav><div class="branding-box"><a href="/wiki/Wiktionary:Huvudsida"><span><img alt="Wiktionary" height="19" src="/static/images/mobile/copyright/wiktionary-wordmark-en.svg" width="107" /></span></a></div><div class="search-box"><input class="search mw-ui-background-icon-search skin-minerva-search-trigger" aria-label="Sök på Wiktionary" autocomplete="off" id="searchInput" name="search" placeholder="Sök på Wiktionary" type="search" value /></div><nav class="minerva-user-navigation" aria-label="Användarnavigering"><div><button class="mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-search-base20 skin-minerva-search-trigger" id="searchIcon" type="submit">Sök</button></div></nav></form></header><main class="mw-body" id="content"><div class="banner-container"><div id="siteNotice"></div></div><div class="pre-content heading-holder"><div class="page-heading"><h1 id="section_0">aerodynamik</h1><div class="tagline"></div></div><nav class="page-actions-menu"><ul class="page-actions-menu__list" id="page-actions"><li class="page-actions-menu__list-item" id="language-selector"><a class="mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-language-base20 mw-ui-icon-with-label-desktop language-selector" data-event-name="menu.languages" data-mw="interface" href="/wiki/Special:Mobil_spr%C3%A5k/aerodynamik" id role="button" title="Läs på ett annat språk">Läs på ett annat språk</a></li><li class="page-actions-menu__list-item" id="page-actions-watch"><a class="mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-star-base20 mw-ui-icon-with-label-desktop watch-this-article mw-watchlink menu__item--page-actions-watch" data-event-name="menu.watch" data-mw="interface" href="/w/index.php?title=Special:Inloggning&amp;returnto=aerodynamik" id="ca-watch" role="button" title="Bevaka">Bevaka</a></li><li class="page-actions-menu__list-item" id="page-actions-edit"><a class="edit-page menu__item--page-actions-edit mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-edit-base20 mw-ui-icon-with-label-desktop" data-event-name="menu.edit" data-mw="interface" href="/w/index.php?title=aerodynamik&amp;action=edit&amp;section=0" id="ca-edit" role="button" title="Redigera huvudavsnittet på denna sida">Redigera</a></li></ul></nav><!-- version 1.0.2 (change every time you update a partial) --><div class="minerva__subtitle"></div></div><div class="content" id="bodyContent"><div class="mw-content-ltr" dir="ltr" id="mw-content-text" lang="sv"><script>function mfTempOpenSection(id){var block=document.getElementById("mf-section-"+id);block.className+=" open-block";block.previousSibling.className+=" open-block";}</script><div class="mw-parser-output"><section class="mf-section-0" id="mf-section-0"></section><h2 class="section-heading" onclick="javascript:mfTempOpenSection(1)"><div class="mw-ui-icon mw-ui-icon-element indicator mw-ui-icon-small mw-ui-icon-flush-left"></div><span class="mw-headline" id="Svenska">Svenska</span><span class="mw-editsection"><a class="mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-edit-base20 edit-page mw-ui-icon-flush-right" data-section="1" href="/w/index.php?title=aerodynamik&amp;action=edit&amp;section=1" title="Redigera avsnitt Svenska">Redigera</a></span></h2><section class="mf-section-1 collapsible-block" id="mf-section-1"><h3 class="in-block"><span class="mw-headline" id="Substantiv">Substantiv</span><span class="mw-editsection"><a class="mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-edit-base20 edit-page mw-ui-icon-flush-right" data-section="2" href="/w/index.php?title=aerodynamik&amp;action=edit&amp;section=2" title="Redigera avsnitt Substantiv">Redigera</a></span></h3><table class="grammar template-sv-subst-n-oräkn" cellspacing="0" width="10"><tbody><tr><th class="main">Böjningar av <i><a class="mw-selflink selflink">aerodynamik</a> </i></th><th class="min" colspan="2">Oräknebart</th></tr><tr><th class="main">utrum</th><th>Obestämd</th><th>Bestämd</th></tr><tr><th>Nominativ</th><td><span class="b-0"><a class="mw-selflink selflink">aerodynamik</a></span></td><td><span class="b-"><a href="/wiki/aerodynamiken" title="aerodynamiken">aerodynamiken</a></span></td></tr><tr><th>Genitiv</th><td><span class="b-"><a href="/wiki/aerodynamiks" title="aerodynamiks">aerodynamiks</a></span></td><td><span class="b-"><a href="/wiki/aerodynamikens" title="aerodynamikens">aerodynamikens</a></span></td></tr></tbody></table><p><b>aerodynamik</b></p><ol><li><a href="/wiki/l%C3%A4ra" title="lära">läran</a> om <a href="/wiki/gas" title="gas">gasers</a> <a href="/wiki/r%C3%B6relse" title="rörelse">rörelse</a><dl><dd></dd><dd class="semantic-relation template-besläktade_ord"><em title="Relaterade ord med samma ursprung (men som har andra prefix eller suffix, eller är av annan ordklass)">Besläktade ord:</em> <a href="/wiki/aerodynamisk" title="aerodynamisk">aerodynamisk</a></dd></dl></li></ol><h4 class="in-block"><span id=".C3.96vers.C3.A4ttningar"></span><span class="mw-headline" id="Översättningar">Översättningar</span><span class="mw-editsection"><a class="mw-ui-icon mw-ui-icon-element mw-ui-icon-wikimedia-edit-base20 edit-page mw-ui-icon-flush-right" data-section="3" href="/w/index.php?title=aerodynamik&amp;action=edit&amp;section=3" title="Redigera avsnitt Översättningar">Redigera</a></span></h4><div class="NavFrame översättningar"><div class="NavHead">läran om gasers rörelse</div><div class="NavContent"><div class="ö-content"><ul><li>finska: <span class="ö" data-lang="fi" data-title="aerodynamiikka"><a class="new" href="/w/index.php?title=aerodynamiikka&amp;action=edit&amp;redlink=1" title="aerodynamiikka (inte skapad ännu)">aerodynamiikka</a></span><sup> <a class="extiw" href="https://fi.wiktionary.org/wiki/aerodynamiikka" title="fi:aerodynamiikka">(fi)</a></sup></li><li>franska: <span class="ö" data-gender="f" data-lang="fr" data-title="aérodynamique"><a class="new" href="/w/index.php?title=a%C3%A9rodynamique&amp;action=edit&amp;redlink=1" title="aérodynamique (inte skapad ännu)">aérodynamique</a></span><sup> <a class="extiw" href="https://fr.wiktionary.org/wiki/a%C3%A9rodynamique" title="fr:aérodynamique">(fr)</a></sup> <b class="gender" title="femininum"><i>f</i></b></li><li>ryska: <span class="ö" data-gender="f" data-lang="ru" data-title="аэродина́мика"><a href="/wiki/%D0%B0%D1%8D%D1%80%D0%BE%D0%B4%D0%B8%D0%BD%D0%B0%D0%BC%D0%B8%D0%BA%D0%B0#Ryska" title="аэродинамика">аэродина́мика</a></span><sup> <a class="extiw" href="https://ru.wiktionary.org/wiki/%D0%B0%D1%8D%D1%80%D0%BE%D0%B4%D0%B8%D0%BD%D0%B0%D0%BC%D0%B8%D0%BA%D0%B0" title="ru:аэродинамика">(ru)</a></sup> <b class="gender" title="femininum"><i>f</i></b></li><li>tyska: <span class="ö" data-gender="f" data-lang="de" data-title="Aerodynamik"><a href="/wiki/Aerodynamik#Tyska" title="Aerodynamik">Aerodynamik</a></span><sup> <a class="extiw" href="https://de.wiktionary.org/wiki/Aerodynamik" title="de:Aerodynamik">(de)</a></sup> <b class="gender" title="femininum"><i>f</i></b></li></ul></div></div></div></section></div><noscript><img src="//sv.wiktionary.org/wiki/Special:CentralAutoLogin/start?type=1x1&amp;mobile=1" alt title width="1" height="1" style="border: none; position: absolute;" /></noscript></div><div class="printfooter">Hämtad från "<a dir="ltr" href="https://sv.wiktionary.org/w/index.php?title=aerodynamik&amp;oldid=3300941">https://sv.wiktionary.org/w/index.php?title=aerodynamik&amp;oldid=3300941</a>"</div></div><div class="post-content" id="page-secondary-actions"></div></main><footer class="mw-footer minerva-footer" role="contentinfo"><div class="last-modified-bar"><div class="post-content last-modified-bar__content"><span class="last-modified-bar__icon mw-ui-icon mw-ui-icon-mw-ui-icon-small mw-ui-icon-wikimedia-history-base20"></span><a class="last-modified-bar__text modified-enhancement" data-timestamp="1558809483" data-user-gender="unknown" data-user-name="LA2" href="/wiki/Special:Historik/aerodynamik"><span>Senast redigerad den 25 maj 2019, kl 20.38</span></a><span class="mw-ui-icon mw-ui-icon-small mw-ui-icon-mf-expand-gray mf-mw-ui-icon-rotate-anti-clockwise indicator"></span></div></div><div class="post-content footer-content"><h2><img alt="Wiktionary" height="19" src="/static/images/mobile/copyright/wiktionary-wordmark-en.svg" width="107" /></h2><div class="license">Innehållet är tillgängligt under <a class="external" href="https://creativecommons.org/licenses/by-sa/3.0/" rel="nofollow">CC BY-SA 3.0</a> om ingenting annat anges.</div><ul class="footer-info hlist hlist-separated"><li id="footer-info-lastmod"> Sidan redigerades senast den 25 maj 2019 kl. 20.38.</li><li id="footer-info-copyright">Text är tillgänglig under licensen <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.sv">Creative Commons Erkännande-Dela Lika</a>; ytterligare villkor kan gälla.  Se <a href="https://foundation.wikimedia.org/wiki/Terms_of_Use">användarvillkoren</a> för detaljer.</li></ul><ul class="footer-places hlist hlist-separated"><li id="footer-places-privacy"><a class="extiw" href="https://foundation.wikimedia.org/wiki/Privacy_policy" title="wmf:Privacy policy">Integritetspolicy</a></li><li id="footer-places-about"><a href="/wiki/Wiktionary:Om" title="Wiktionary:Om">Om Wiktionary</a></li><li id="footer-places-disclaimer"><a href="/wiki/Wiktionary:Allm%C3%A4nt_f%C3%B6rbeh%C3%A5ll" title="Wiktionary:Allmänt förbehåll">Förbehåll</a></li><li id="footer-places-terms-use"><a href="https://foundation.wikimedia.org/wiki/Terms_of_Use">Användarvillkor</a></li><li id="footer-places-desktop-toggle"><a href="//sv.wiktionary.org/w/index.php?title=aerodynamik&amp;mobileaction=toggle_view_desktop" id="mw-mf-display-toggle">Stationär dator</a></li><li id="footer-places-developers"><a href="https://www.mediawiki.org/wiki/Special:MyLanguage/How_to_contribute">Utvecklare</a></li><li id="footer-places-statslink"><a href="https://stats.wikimedia.org/#/sv.wiktionary.org">Statistik</a></li><li id="footer-places-cookiestatement"><a href="https://foundation.wikimedia.org/wiki/Cookie_statement">Information om kakor</a></li></ul></div></footer></div></div><div class="mw-notification-area" data-mw="interface"></div><!-- v:8.3.0 --><script>(RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgPageParseReport":{"limitreport":{"cputime":"0.108","walltime":"0.148","ppvisitednodes":{"value":595,"limit":1000000},"postexpandincludesize":{"value":3446,"limit":2097152},"templateargumentsize":{"value":835,"limit":2097152},"expansiondepth":{"value":8,"limit":40},"expensivefunctioncount":{"value":0,"limit":500},"unstrip-depth":{"value":0,"limit":20},"unstrip-size":{"value":0,"limit":5000000},"entityaccesscount":{"value":0,"limit":400},"timingprofile":["100.00%  137.598      1 -total"," 69.22%   95.251      1 Mall:sv-subst-n-oräkn"," 23.63%   32.518      4 Mall:ö+"," 18.72%   25.756      2 Mall:länka","  9.57%   13.166      4 Mall:länk","  9.18%   12.628      4 Mall:länka-b","  6.55%    9.018      4 Mall:sidnamn","  2.90%    3.996      1 Mall:grammatik-start","  2.74%    3.765      1 Mall:besläktade_ord","  2.23%    3.070      1 Mall:ö-botten"]},"scribunto":{"limitreport-timeusage":{"value":"0.048","limit":"10.000"},"limitreport-memusage":{"value":1791459,"limit":52428800}},"cachereport":{"origin":"mw2309","timestamp":"20201015144120","ttl":2592000,"transientcontent":false}}});});</script><script>(window.NORLQ=window.NORLQ||[]).push(function(){var ns,i,p,img;ns=document.getElementsByTagName('noscript');for(i=0;i<ns.length;i++){p=ns[i].nextSibling;if(p&&p.className&&p.className.indexOf('lazy-image-placeholder')>-1){img=document.createElement('img');img.setAttribute('src',p.getAttribute('data-src'));img.setAttribute('width',p.getAttribute('data-width'));img.setAttribute('height',p.getAttribute('data-height'));img.setAttribute('alt',p.getAttribute('data-alt'));p.parentNode.replaceChild(img,p);}}});</script><script>(RLQ=window.RLQ||[]).push(function(){mw.config.set({"wgBackendResponseTime":326,"wgHostname":"mw2309"});});</script></body></html>
