crates/htmlarc-dom/src/html/tests/snapshots/htmlarc_dom__html__tests__repackaged_doc_nodes.snap
---
source: common/html/src/html/tests/mod.rs
expression: "format!(\"{:?}\", new_doc.elements.lock().nodes)"
---
idx  prev-sib, next-sib, first-ch, last-ch,  parents and tag
[ 0]                            1        2   sys_root
[ 1]                  2                      0  > head
[ 2]        1                   3       13   0  > body
[ 3]                  6         4        4   0  > 2  > div
[ 4]                            5        5   0  > 2  > 3  > b
[ 5]                                         0  > 2  > 3  > 4  > sys_text
[ 6]        3        13         7       12   0  > 2  > article
[ 7]                  8                      0  > 2  > 6  > sys_text
[ 8]        7         9                      0  > 2  > 6  > sys_text
[ 9]        8        10                      0  > 2  > 6  > sys_text
[10]        9        11                      0  > 2  > 6  > sys_text
[11]       10        12                      0  > 2  > 6  > sys_text
[12]       11                                0  > 2  > 6  > sys_text
[13]        6                                0  > 2  > section
