crates/htmlarc-dom/src/html/tests/snapshots/htmlarc_dom__html__tests__select_css@aerodynamik.html.snap
---
source: crates/htmlarc-dom/src/html/tests/mod.rs
expression: print_elements(selected)
input_file: crates/htmlarc-dom/src/html/tests/html/aerodynamik.html
---
label#mw-mf-main-menu-button.mw-ui-icon.mw-ui-icon-element.mw-ui-icon-wikimedia-menu-base20.mw-ui-icon-flush-left.toggle-list__toggle
a.mw-ui-icon.mw-ui-icon-before.mw-ui-icon-minerva-home
a.mw-ui-icon.mw-ui-icon-before.mw-ui-icon-minerva-die
a.mw-ui-icon.mw-ui-icon-before.mw-ui-icon-minerva-heart
button#searchIcon.mw-ui-icon.mw-ui-icon-element.mw-ui-icon-wikimedia-search-base20.skin-minerva-search-trigger
a.mw-ui-icon.mw-ui-icon-element.mw-ui-icon-wikimedia-language-base20.mw-ui-icon-with-label-desktop.language-selector
a#ca-watch.mw-ui-icon.mw-ui-icon-element.mw-ui-icon-wikimedia-star-base20.mw-ui-icon-with-label-desktop.watch-this-article.mw-watchlink.menu__item--page-actions-watch
div.mw-ui-icon.mw-ui-icon-element.indicator.mw-ui-icon-small.mw-ui-icon-flush-left
a.mw-ui-icon.mw-ui-icon-element.mw-ui-icon-wikimedia-edit-base20.edit-page.mw-ui-icon-flush-right
a.mw-ui-icon.mw-ui-icon-element.mw-ui-icon-wikimedia-edit-base20.edit-page.mw-ui-icon-flush-right
a.mw-ui-icon.mw-ui-icon-element.mw-ui-icon-wikimedia-edit-base20.edit-page.mw-ui-icon-flush-right
span.mw-ui-icon.mw-ui-icon-small.mw-ui-icon-mf-expand-gray.mf-mw-ui-icon-rotate-anti-clockwise.indicator
