crates/htmlarc-dom/src/html/tests/snapshots/htmlarc_dom__html__tests__select_css@foreign-svg-math.html.snap
---
source: crates/htmlarc-dom/src/html/tests/mod.rs
expression: print_elements(selected)
input_file: crates/htmlarc-dom/src/html/tests/html/foreign-svg-math.html
---

